// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verify func: Fully Invalid Update Document 1`] = `
Array [
  Object {
    "model": "none",
    "type": 7,
  },
]
`;

exports[`verify func: Invalid Type for updated string 1`] = `
Array [
  Object {
    "errors": Array [
      Object {
        "type": 3,
      },
    ],
    "mapTo": "myString",
  },
]
`;

exports[`verify func: Valid Update gets persisted 1`] = `
Object {
  "_id": "ID#0",
  "myString": "changed",
}
`;

exports[`verify func: result of creation 1`] = `
Object {
  "_id": "ID#0",
  "myString": "obj",
}
`;
